--- a/frontEndMain/style.css
+++ b/frontEndMain/style.css
@@ -188,6 +188,9 @@ html ::-webkit-scrollbar{
 
 #gallery{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
     background-image: url(./Images/white.jpg);
     
 }
