--- a/frontEndMain/style.css
+++ b/frontEndMain/style.css
@@ -26,6 +26,9 @@ html ::-webkit-scrollbar{
 
 #navbar{
     background-color:  #322C2B!important;
+    /* position: sticky;
+    top: 0;
+    z-index: 1000; */
 }
 
 #logoimg img{
@@ -190,7 +193,7 @@ html ::-webkit-scrollbar{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    background-image: url(./Images/white.jpg);
+    background-image: url(./Images/blurBack.jpg);
     
 }
 
