--- a/adminPanel/style.css
+++ b/adminPanel/style.css
@@ -1,7 +1,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    background-image: url(../cart/choc3.jpeg.jpg);
+    background-image: url(blurpro.jpg);
     background-size: cover;
     overflow: hidden;
 }
