--- a/adminPanel/style.css
+++ b/adminPanel/style.css
@@ -1,7 +1,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    background-image: url(blurpro.jpg);
+    background-image: url(img/blurpro.jpg);
     background-size: cover;
     overflow: hidden;
 }
@@ -99,7 +99,7 @@ h1{
 }
 
 .logout{
-    background-image: url(shutdown.png);
+    background-image: url(img/shutdown.png);
     background-size: cover;
     background-color:  #3a170d;
     width: 40px;
@@ -109,7 +109,7 @@ h1{
 }
 
 .btnUpdate{
-    background-image: url(../cart/changes.png);
+    background-image: url(img/changes.png);
     height: 25px;
     width: 25px;
     border: none;
@@ -119,7 +119,7 @@ h1{
 }
 
 .btnDelete{
-    background-image: url(../cart/bin.png) ;
+    background-image: url(img/bin.png) ;
     height: 25px;
     width: 25px;
     border: none;
@@ -137,7 +137,7 @@ h1{
 }
 
 .btnView{
-    background-image: url(view.png) ;
+    background-image: url(img/view.png) ;
     height: 25px;
     width: 25px;
     border: none;
@@ -146,7 +146,7 @@ h1{
     border-radius: 5px;
 }
 .btnDone{
-    background-image: url(check-mark.png) ;
+    background-image: url(img/check-mark.png) ;
     height: 25px;
     width: 25px;
     border: none;
@@ -162,7 +162,7 @@ h1{
 }
 
 .btnUndo{
-    background-image: url(undo.png) ;
+    background-image: url(img/undo.png) ;
     height: 25px;
     width: 25px;
     border: none;
