--- a/frontEndMain/displayItems/productStyles.Css
+++ b/frontEndMain/displayItems/productStyles.Css
@@ -60,164 +60,12 @@ html ::-webkit-scrollbar{
 
 /* nav */
 
-/* body */
-
-#main{
-    width: 100%;
-    height: 90vh;
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(./Images/choc3.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 88%;
-}
-
-#main .content{
-    padding-top: 210px;
-    margin-left: 56px;
-}
-
-#main .content h3{
-    font-size: 50px;
-    color: white;
-}
-
-#main .content p{
-    margin-top: 10px;
-    color: white;
-
-}
-
-#btnOrder{
-    width: 150px;
-    height: 36px;
-    margin-top: 20px;
-    background-color: white;
-    border-radius: 5px;
-    font-weight: bold;
-    border: none;
-    transition: 0.5s ease;
-    cursor: pointer;
-}
-
-#btnOrder:hover{
-    background: #322C2B;
-    color: white;
-}
-
-
-/* body */
-
-
-
-/* about us */
-#about{
-    width: 100%;
-    height: 100vh;
-    background-color: #F6F1E9;
-}
-
-.text{
-    font-weight: bold;
-}
-
-
-#about .container{
-    padding-top: 70px;
-}
-
-.heading{
-    text-align: center;
-    margin-bottom: 50px;
-    color: #322C2B;
-    font-size: 40px;
-    font-weight: bold;
-}
-
-.head span{
-    color: #322C2B;
-}
-
-.chocoAboutUs{
- 
-    font-family: 'Roboto', sans-serif; 
-    font-weight: 800; 
-    font-size: 5vw;
-    background-image: url(./Images/lpl.webp);
-    background-size: cover;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    
-} 
-
-
-
-#about .card{
-    border-radius: 15px;
-}
-
-#about .card img{
-    border-radius: 15px;
-}
-
-@media screen and (max-width:982px){
-    #about P{
-        font-size: 8px;
-    }
-}
-
-@media screen and (max-width:766px){
-    #about P{
-        font-size: 15px;
-    }
-
-    #about{
-        height: 120vh;
-    }
-}
-
-
-/* about us */
-
-/* best sellers */
-
-
-/* best sellers */
-
-/* gallery */
-
-#gallery{
-    width: 100%;
-    background-image: url(./Images/white.jpg);
-    
-}
-
-.headingG{
-    text-align: center;
-    color:#322C2B; 
-    font-size: 40px;
-    font-weight: bold;
-}
-
-
-#gallery .card{
-    border-radius: 10px;
-    cursor: pointer;    
-}
-
-#gallery .card img{
-    border-radius: 10px;
-    
-} 
-
 body{
-
     background: linear-gradient(326deg, rgba(43,8,2,1) 30%, rgba(92,47,73,1) 50%, rgba(20,8,10,1) 100%)!important;
-    background-image: url('choc3.jpeg') !important; 
     background-size: cover !important;
     background-repeat: no-repeat !important;
-    width: 100% !important;
-    height: 100% !important;
+    width: 100vw !important;
+    height: 100vh !important;
 }
 
 .btn-primary{
