--- a/frontEndMain/style.css
+++ b/frontEndMain/style.css
@@ -75,7 +75,7 @@ html ::-webkit-scrollbar{
 #main{
     width: 100vw;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(Images/hand4.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(../img/hand4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 88%;
@@ -148,7 +148,7 @@ html ::-webkit-scrollbar{
     font-family: 'Roboto', sans-serif; 
     font-weight: 800; 
     font-size: 5vw;
-    background-image: url(Images/textMask.jpg);
+    background-image: url(../img/textMask.jpg);
     background-size: cover;
     background-clip: text;
     -webkit-background-clip: text;
@@ -191,7 +191,7 @@ html ::-webkit-scrollbar{
 
 #bestSelling{
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(Images/best.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(../img/best.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 88%;
@@ -296,7 +296,7 @@ html ::-webkit-scrollbar{
     width: 100%;
     height: 100vh;
     object-fit: cover;
-    background-image: url(Images/blurBack.jpg);
+    background-image: url(../img/blurBack.jpg);
     
 }
 
@@ -326,7 +326,7 @@ html ::-webkit-scrollbar{
 #contact {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(Images/topView.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(../img/topView.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 88%;
