--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ html ::-webkit-scrollbar{
 #main{
     width: 100vw;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(img/hand4.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(img/choc3.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 88%;
